# jira-internal-be

./: CLAUDE.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6bf1b1e9e135_initial_with_uuids.py  8d1b88d869b1_add_project_tables.py  c3a50e40a51b_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  projects.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: enums.py  project.py  project_member.py  task.py  user.py
app/schemas/: auth.py  project.py  task.py  user.py
app/scripts/: seed_admin.py
app/services/: auth_service.py  task_service.py
